--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.wdtpr.augus.spellkeyboard.MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.wdtpr.augus.spellkeyboard.widget.SpellKeyBoard
+        android:id="@+id/mSpellKeyBoard"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        app:KeyboardItemBackOne="@drawable/keyboard_back_normal"
+        app:KeyboardItemBackTwo="@drawable/keyboard_back_press"
+        app:KeyboardItemPadding="5px"
+        app:answerCorrectAnimateDelay="3000"
+        app:fillGridPaddingRL="5px"
+        app:normalFillGridItemType1="@drawable/fillgrid_type1"
+        app:normalFillGridItemType2="@drawable/fillgrid_type2"
+        app:normalKeyboardItem="@drawable/keyboard_normal"
+        app:touchKeyboardItem="@drawable/keyboard_press" />
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/test1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical" />
+
+</LinearLayout>
